# fastapi-ai-posts

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  lint.sh  pyproject.toml  requirements.txt  start.sh
app/: db.py  dependencies.py  main.py
app/common/: app.py  auth.py  aws.py  celery.py  db.py  gemini.py  redis.py  settings.py
app/common/exc/: expetion.py
app/database/: db.py  redis.py
app/database/alembic/: env.py
app/database/alembic/versions/: 66b76a2185b0_add_friendship_and_user_avatar.py  ba009343b973_initial_migration.py  c7a839cfbd8d_add_post_reaction.py
app/enums/: base.py  comments.py  posts.py
app/models/: __init__.py  base.py  comment.py  comment_response.py  post.py  post_reaction.py  tag.py  user.py
app/repositories/: base_repository.py  comment_repository.py  comments_repository.py  post_reaction_repository.py  post_repository.py  response_repository.py  user_repository.py
app/routes/: auth_router.py  comment_response_router.py  comment_router.py  main_router.py  post_reaction_router.py  post_router.py  user_router.py
app/schemas/: comment_response_schema.py  comment_schema.py  mixins.py  post_reaction_schema.py  post_schema.py  user_schema.py
app/services/: ai_service.py  auth_service.py  celery_service.py  comment_response_service.py  comment_service.py  post_reaction_service.py  post_service.py  user_service.py
app/shemas/: user_schema.py
app/tasks/: comment_response_tasks.py
app/utils/: dependencies.py  s3.py
